# HealthBridgeAI

./: .gitignore  README.md  SYSTEM_DESIGN.md  pyproject.toml
assets/: documentation.md
data/cache_warmup/: hiv.yaml  malaria.yaml  tb.yaml
data/eval/: golden.yaml
deploy/: Dockerfile  Dockerfile.processor  cloudbuild.yaml  cloudrun.yaml
processor/: main.py
scripts/: crawl_kb.py  evaluate_kb.py  populate_kb.py  setup_gcp.sh  setup_pinecone.py  warm_cache.py
src/healthbridgeai/: main.py
src/healthbridgeai/api/: __init__.py  health.py  webhook.py
src/healthbridgeai/config/: __init__.py  diseases.yaml  settings.py
src/healthbridgeai/core/: exceptions.py
src/healthbridgeai/core/models/: disease.py  message.py  response.py  retrieval.py  user.py
src/healthbridgeai/core/ports/: cache.py  llm.py  messaging.py  search.py  storage.py  vector_store.py
src/healthbridgeai/core/services/: __init__.py  generator.py  language.py  pipeline.py  rag.py  router.py
src/healthbridgeai/infrastructure/: __init__.py
src/healthbridgeai/infrastructure/audio/: __init__.py  synthesizer.py  transcriber.py
src/healthbridgeai/infrastructure/cache/: __init__.py  semantic.py
src/healthbridgeai/infrastructure/llm/: openrouter.py
src/healthbridgeai/infrastructure/messaging/: __init__.py  twilio.py  whatchamp.py
src/healthbridgeai/infrastructure/search/: __init__.py  tavily.py
src/healthbridgeai/infrastructure/storage/: __init__.py  firestore.py  gcs.py
src/healthbridgeai/infrastructure/vector_store/: __init__.py  pinecone.py
src/healthbridgeai/processor/: __init__.py  main.py
tests/: conftest.py
tests/integration/: test_retrieval.py
tests/unit/api/: test_health.py
tests/unit/core/: test_generator.py  test_pipeline.py  test_rag.py  test_router.py
tests/unit/infrastructure/: test_openrouter.py  test_pinecone.py  test_semantic_cache.py  test_whatchamp.py
