[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "healthbridgeai"
version = "2.1.0"
description = "Multi-disease WhatsApp AI companion for integrated disease management"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AHFID AI Labs", email = "ai-siteam@ahfid.org" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "python-multipart>=0.0.9",

    # HTTP client (WhatChimp adapter, audio synthesis)
    "httpx>=0.27.0",

    # LLM / AI
    "openai>=1.40.0",           # OpenRouter uses OpenAI-compatible client
    "instructor>=1.4.0",        # Structured LLM output + Pydantic validation
    "FlagEmbedding>=1.2.0",     # BAAI/bge-m3

    # Vector store + search
    "pinecone[grpc]>=5.0.0",
    "pinecone-text>=0.9.0",     # BM25Encoder for sparse vectors
    "flashrank>=0.2.9",         # Cross-encoder re-ranking

    # Web search
    "tavily-python>=0.3.0",

    # Chunking
    "langchain>=0.2.0",
    "langchain-experimental>=0.0.60",   # SemanticChunker
    "langchain-community>=0.2.0",

    # Language detection + translation
    "langdetect>=1.0.9",
    "deep-translator>=1.11.4",

    # Document parsing
    "pypdf>=4.3.0",
    "python-docx>=1.1.0",

    # GCP
    "google-cloud-storage>=2.17.0",
    "google-cloud-firestore>=2.16.0",
    "google-cloud-pubsub>=2.21.0",
    "google-cloud-secret-manager>=2.20.0",

    # Audio
    "gtts>=2.5.0",
    "pydub>=0.25.1",
    "requests>=2.32.0",

    # Config + validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",

    # Reliability
    "tenacity>=8.3.0",

    # Observability
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",            # FastAPI test client
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "ragas>=0.1.13",            # RAG evaluation
    "types-PyYAML",
    "types-requests",
]

[project.scripts]
populate-kb = "healthbridgeai.scripts.populate_kb:main"
evaluate-kb = "healthbridgeai.scripts.evaluate_kb:main"

[tool.hatch.build.targets.wheel]
packages = ["src/healthbridgeai"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["healthbridgeai"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/healthbridgeai --cov-report=term-missing --cov-fail-under=80 -m 'not integration'"

[tool.pytest.ini_options.markers]
integration = "marks tests as integration tests (require live GCP/Pinecone; run with INTEGRATION=1)"
